# bansheelong2

./: .env  .gitignore  Cargo.toml  Rocket.toml  default.nix  log  meals-database.json  rustfmt.toml  shell.nix
client/: Cargo.toml
client/src/: main.rs  styles.rs  util.rs  window.rs
client/src/calendar/: calendar.rs  mod.rs
client/src/flavor/: component.rs  mod.rs
client/src/meals/: component.rs  meal_component.rs  meals_chooser_component.rs  meals_list_component.rs  meals_random_chooser_component.rs  mod.rs  shopping_list_component.rs
client/src/scrollable_menu/: component.rs  mod.rs
client/src/storage/: api.rs  component.rs  mod.rs
client/src/todos/: component.rs  mod.rs  types.rs
client/src/weather/: api.rs  component.rs  mod.rs  types.rs
client/src/widgets/: circle.rs  mod.rs
meals_database/: Cargo.toml
meals_database/src/: database.rs  lib.rs  rest_database.rs  scraper.rs  types.rs
meals_database/src/bins/: cli.rs  scraper.py
meals_database_server/: Cargo.toml  output.css  package-lock.json  package.json
meals_database_server/src/: auth.rs  context.rs  error.rs  main.rs
meals_database_server/src/rendering/: meals.rs  mod.rs  new_recipe.rs
meals_database_server/src/routes/: htmx.rs  mod.rs  rest.rs  ws.rs
meals_database_server/src/services/: meals_database.rs  mod.rs
meals_database_server/src/styles/: style.css
meals_database_server/src/styles/components/: editor.css  login.css  meal.css  shopping-list-item.css
storage_server/: Cargo.toml
storage_server/src/: lib.rs  types.rs
storage_server/src/bins/: server.rs
