[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
env_logger = "0.11.3"
iced = { git = "https://github.com/iced-rs/iced", branch = "master", features = ["lazy", "svg", "tokio"] }
log = "0.4.22"
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1.0.204"
serde_json = "1.0.120"
