[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bitflags = "2.6.0"
bytes = "1.7.1"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.3"
iced = { git = "https://github.com/iced-rs/iced", branch = "master", features = ["advanced", "image", "lazy", "svg", "tokio"] }
log = "0.4.22"
meals_database = { path = "../meals_database/" }
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1.0.204"
serde_json = "1.0.120"
tokio = "1.0"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
