[package]
name = "meals_database"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "meals_database_cli"
path = "src/bins/cli.rs"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = "1.0.204"
serde_json = "1.0.120"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
