[package]
name = "meals_database"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "meals_database_cli"
path = "src/bins/cli.rs"

[dependencies]
async-tungstenite = { version = "0.27.0", features = ["tokio-runtime"] }
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.22"
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1.0.204"
serde_json = "1.0.120"
tokio = { version = "1.0", features = ["sync"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
