[package]
name = "meals_database_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytes = "1.7.1"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.3"
futures = "0.3.30"
lazy_static = "1.5.0"
log = "0.4.22"
maud = { version = "0.26.0", features = ["rocket"] }
meals_database = { path = "../meals_database" }
rand = "0.8.5"
serde = "1.0.204"
serde_json = "1.0.120"
rocket = { version = "0.5.1", features = ["json"] }
rocket_ws = { version = "0.1.1" }
thiserror = "1.0"
tokio = { version = "1.0", features = ["sync"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
